# Jogo_da_Velha

./: CMakeLists.txt  README.md  main.cpp
db/: score.db
include/: connection_db.h  functions.h  macros.h  menu.h  player.h  player_vs_com.h  player_vs_player.h  score.h  table.h  templates.h
src/: connection_db.cpp  functions.cpp  macros.cpp  menu.cpp  player.cpp  player_vs_com.cpp  player_vs_player.cpp  score.cpp  table.cpp  templates.cpp
